autoreload added with nodemon and electron-reload

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "prebuild": "rimraf ./app/*.js ./app/*.map",
     "build": "pnpm run script",
     "script": "tsc --project ./src",
-    "predist": "pnpm run build",
     "dist": "gulp --cwd .",
-    "start": "electron ./",
+    "start": "electron .",
+    "watch": "nodemon",
     "pretest": "rimraf ./coverage",
     "test": "jest --env=enzyme --setupFilesAfterEnv=jest-enzyme --reporters=jest-html-reporter jest-spec-reporter jest-junit --coverage --coverageDirectory ../test/coverage --rootDir ./src",
     "pree2e": "rimraf ./test/coverage-e2e ./e2e/screenshots",
@@ -143,6 +143,7 @@
     "jest-spec-reporter": "1.0.14",
     "lint-staged": "10.2.11",
     "node-sass": "4.14.1",
+    "nodemon": "^2.0.4",
     "prettier": "2.0.5",
     "react-test-renderer": "16.13.1",
     "rimraf": "3.0.2",
