--- a/package.json
+++ b/package.json
@@ -87,9 +87,13 @@
   },
   "homepage": "https://github.com/maxgdn/billar",
   "dependencies": {
+    "@reach/router": "^1.3.4",
+    "@types/reach__router": "^1.3.5",
     "electron": "9.2.1",
     "fancy-log": "1.3.3",
     "luxon": "^1.24.1",
+    "pdfkit": "^0.11.0",
+    "pouchdb-adapter-idb": "^7.2.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "rxdb": "^9.5.0",
