--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/reach__router": "^1.3.5",
     "electron": "9.2.1",
     "fancy-log": "1.3.3",
+    "formik": "^2.1.5",
     "luxon": "^1.24.1",
     "pdfkit": "^0.11.0",
     "pouchdb-adapter-idb": "^7.2.2",
